--- a/colab_test.ipynb
+++ b/colab_test.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "name": "colab_test.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -13,16 +12,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/theodorhusefest/ADA-2019-project1-sovellettu-tiedon-analysoint/blob/master/colab_test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -45,7 +34,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "print('hej')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -55,16 +44,16 @@
       "metadata": {
         "id": "tHuq3-opev8x",
         "colab_type": "code",
+        "outputId": "57f7a7fa-f416-49fb-d7c4-41e6646883cf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "57f7a7fa-f416-49fb-d7c4-41e6646883cf"
+        }
       },
       "source": [
         ""
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
