Work on data cleaning

--- a/Livestock_description.ipynb
+++ b/Livestock_description.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22315, 121)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data = pd.read_csv('raw_data/Production_LivestockPrimary_E_All_Data/Production_LivestockPrimary_E_All_Data.csv', sep = ',', encoding = 'latin-1')"
+    "data = pd.read_csv('raw_data/Production_LivestockPrimary_E_All_Data/Production_LivestockPrimary_E_All_Data.csv', sep = ',', encoding = 'latin-1')\n",
+    "data.shape"
    ]
   },
   {
@@ -25,30 +37,75 @@
    "metadata": {},
    "source": [
     "## Explanations of data files\n",
-    "The livestock data file contains 7 columns of information, and the rest of the columns are for the yearly values. \n",
+    "Each row of the livestock dataset contains data on all years available, on a given metadata.  \n",
+    "There are 7 columns of metadata, which can be seen below, and the rest of the columns are data for each year.  \n",
+    "The years usually span from 1961 to 2017, but some years are missing.  \n",
     "\n",
     "| Column name         | Explanation|\n",
     "|------------------------|--------|\n",
-    "| Area Code              |Integer of area 1-1 relationship with Area|\n",
     "| Area                   |Name of country/area|\n",
-    "| Item Code              |1-1 relationship with Item|\n",
-    "| Item                   |Type of product|\n",
-    "| Element Code           |1-many relationship with Element|\n",
+    "| Area Code              |Unique code for each country/area|\n",
+    "| Item                   |Type of product, e.g \"Eggs, hen, in shell\"|\n",
+    "| Item Code              |Unique code for each Item|\n",
     "| Element                |Type data, e.g. Production, Yield, Milk Animals |\n",
-    "| Unit                   |The unit of the element, there's 9 different units. I.e. unit of measurement |\n",
+    "| Unit                   |The unit of the measurement of the element, in total 9 different units |\n",
+    "| Element Code           |Unique code based on pairs of Element and Unit|\n",
     "\n",
     "\n",
     "For each year there is also a column with the year + F, which signifies the meaning of the data.  \n",
     "\n",
-    "| Meaning of flag         | Flag      |\n",
-    "|------------------------|--------|\n",
-    "| Unofficial data        | *      |\n",
-    "| FAO Estimate           | F      |\n",
-    "| Official data          | NaN    |\n",
-    "| Calculated data | Fc |\n",
-    "| Aggregate, may include official, semi-official, estimated or calculated data | A |\n",
-    "| Data not available | M |\n",
+    "|  Flag  | Meaning of flag        |\n",
+    "|--------|------------------------|\n",
+    "| *      | Unofficial data        |\n",
+    "| F      | FAO Estimate           |\n",
+    "| NaN    | Official data          |\n",
+    "| Fc     | Calculated data        |\n",
+    "| A      | Aggregate, may include official, semi-official, estimated or calculated data |\n",
+    "| M      | Data not available     | \n",
+    "| Im     |FAO data based on imputation methodology |\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Units - REWRITE THIS\n",
+    "Producing Animals/Slaughtered: Laying in 1000 heads; Milk Animals in heads; Prod Population (Beehives) in number; Prod Population (Slaughtered animals) in heads.  \n",
+    "Production Quantity: Eggs in tonnes and in number; Meat and milk in tonnes; Wool and Hides and Skins in tonnes; Honey and Beeswax in tonnes.  \n",
+    "Yield: 100 milligrams per animal; number per animal; hectograms per animal; hectograms.  \n",
+    "Yield/Carcass Weight: 0.1 grams per animal (poultry); hectograms per animal (other animals)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Laying', 'Yield', 'Production', 'Producing Animals/Slaughtered',\n",
+       "       'Yield/Carcass Weight', 'Milk Animals', 'Prod Popultn'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.unique(data['Element'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LOOK AT THIS\n",
+    "**Maybe we should shoud split dataset into country-based and area-based. Also, there might be a better way to clean the data**  \n",
+    "_We wish to separate our dataset into country-based and area-based. Here we start by removing all areas._"
    ]
   },
   {
@@ -330,6 +387,7 @@
     "# print(data.groupby(['Item']).agg({'Item Code':'unique'}).to_string())\n",
     "# In the Element - Element Code relationship however, There's a 1 - many relationsship\n",
     "data.groupby(['Element']).agg({'Element Code':'unique'})\n",
+    "\n",
     "# 1-1 relationship between Area and Area Code \n",
     "# print(data.groupby(['Area']).agg({'Area Code':'unique'}).to_string())\n",
     "print('The unique units: {}'.format(data['Unit'].unique()))\n",
@@ -366,22 +424,19 @@
    "metadata": {},
    "source": [
     "#### Regarding the above plot\n",
-    "We can see that the meat production steadily increases until about 2010 when there's a sharp drop, probably due to some data change. The plot says that the meat production started at 25 billion tonnes 1961, and raised to 75 billion tones in 2010. This seems way to much, we probably simplified the summation of the data and need to look into it further."
+    "We can see that the meat production steadily increases until about 2010 when there's a sharp drop, probably due to some data change. The plot says that the meat production started at 25 billion tonnes 1961, and raised to 75 billion tones in 2010. This seems way to much, we probably simplified the summation of the data and need to look into it further.\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Challenges\n",
+    "- How do we visualize the data when it is in so many different formats, units, animals etc\n",
+    "- We want to know delevopment in crop/livestock production worldwide 1960 - today\n",
+    "- How do we handle the different Flags?\n",
+    "- Somehow aggregate the units? Make sure we have aggregate unique data and don't count something twice\n"
+   ]
   }
  ],
  "metadata": {
@@ -400,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
