Further work on data cleaning

--- a/Livestock_description.ipynb
+++ b/Livestock_description.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "(22315, 121)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,6 +30,390 @@
    "source": [
     "data = pd.read_csv('raw_data/Production_LivestockPrimary_E_All_Data/Production_LivestockPrimary_E_All_Data.csv', sep = ',', encoding = 'latin-1')\n",
     "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Area Code</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Item Code</th>\n",
+       "      <th>Item</th>\n",
+       "      <th>Element Code</th>\n",
+       "      <th>Element</th>\n",
+       "      <th>Unit</th>\n",
+       "      <th>Y1961</th>\n",
+       "      <th>Y1961F</th>\n",
+       "      <th>Y1962</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Y2013</th>\n",
+       "      <th>Y2013F</th>\n",
+       "      <th>Y2014</th>\n",
+       "      <th>Y2014F</th>\n",
+       "      <th>Y2015</th>\n",
+       "      <th>Y2015F</th>\n",
+       "      <th>Y2016</th>\n",
+       "      <th>Y2016F</th>\n",
+       "      <th>Y2017</th>\n",
+       "      <th>Y2017F</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>58</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>987</td>\n",
+       "      <td>Wool, greasy</td>\n",
+       "      <td>5319</td>\n",
+       "      <td>Prod Popultn</td>\n",
+       "      <td>Head</td>\n",
+       "      <td>18000000.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>18150000.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13141000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>171</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>1182</td>\n",
+       "      <td>Honey, natural</td>\n",
+       "      <td>5314</td>\n",
+       "      <td>Prod Popultn</td>\n",
+       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>529</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>987</td>\n",
+       "      <td>Wool, greasy</td>\n",
+       "      <td>5319</td>\n",
+       "      <td>Prod Popultn</td>\n",
+       "      <td>Head</td>\n",
+       "      <td>50150000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>47305408.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10616300.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>698</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>987</td>\n",
+       "      <td>Wool, greasy</td>\n",
+       "      <td>5319</td>\n",
+       "      <td>Prod Popultn</td>\n",
+       "      <td>Head</td>\n",
+       "      <td>157000000.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>164000000.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>81750000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1107</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>987</td>\n",
+       "      <td>Wool, greasy</td>\n",
+       "      <td>5319</td>\n",
+       "      <td>Prod Popultn</td>\n",
+       "      <td>Head</td>\n",
+       "      <td>600000.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>650000.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1900000.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>22009</td>\n",
+       "      <td>5815</td>\n",
+       "      <td>Low Income Food Deficit Countries</td>\n",
+       "      <td>1182</td>\n",
+       "      <td>Honey, natural</td>\n",
+       "      <td>5314</td>\n",
+       "      <td>Prod Popultn</td>\n",
+       "      <td>No</td>\n",
+       "      <td>7492300.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>7492300.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12154000.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>12357500.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>12538236.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>13026913.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>13321703.0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>22125</td>\n",
+       "      <td>5815</td>\n",
+       "      <td>Low Income Food Deficit Countries</td>\n",
+       "      <td>987</td>\n",
+       "      <td>Wool, greasy</td>\n",
+       "      <td>5319</td>\n",
+       "      <td>Prod Popultn</td>\n",
+       "      <td>Head</td>\n",
+       "      <td>24468000.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>25018000.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>49940000.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>22147</td>\n",
+       "      <td>5817</td>\n",
+       "      <td>Net Food Importing Developing Countries</td>\n",
+       "      <td>1183</td>\n",
+       "      <td>Beeswax</td>\n",
+       "      <td>5314</td>\n",
+       "      <td>Prod Popultn</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2453000.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2453000.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>386000.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>387500.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>389093.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>403657.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>400019.0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>22165</td>\n",
+       "      <td>5817</td>\n",
+       "      <td>Net Food Importing Developing Countries</td>\n",
+       "      <td>1182</td>\n",
+       "      <td>Honey, natural</td>\n",
+       "      <td>5314</td>\n",
+       "      <td>Prod Popultn</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2492300.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2492300.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>611045.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>611898.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>611081.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>619539.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>613845.0</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>22293</td>\n",
+       "      <td>5817</td>\n",
+       "      <td>Net Food Importing Developing Countries</td>\n",
+       "      <td>987</td>\n",
+       "      <td>Wool, greasy</td>\n",
+       "      <td>5319</td>\n",
+       "      <td>Prod Popultn</td>\n",
+       "      <td>Head</td>\n",
+       "      <td>31017004.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>31298727.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>34223300.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>134 rows × 121 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Area Code                                     Area  Item Code  \\\n",
+       "58             2                              Afghanistan        987   \n",
+       "171            4                                  Algeria       1182   \n",
+       "529            9                                Argentina        987   \n",
+       "698           10                                Australia        987   \n",
+       "1107          16                               Bangladesh        987   \n",
+       "...          ...                                      ...        ...   \n",
+       "22009       5815        Low Income Food Deficit Countries       1182   \n",
+       "22125       5815        Low Income Food Deficit Countries        987   \n",
+       "22147       5817  Net Food Importing Developing Countries       1183   \n",
+       "22165       5817  Net Food Importing Developing Countries       1182   \n",
+       "22293       5817  Net Food Importing Developing Countries        987   \n",
+       "\n",
+       "                 Item  Element Code       Element  Unit        Y1961 Y1961F  \\\n",
+       "58       Wool, greasy          5319  Prod Popultn  Head   18000000.0      F   \n",
+       "171    Honey, natural          5314  Prod Popultn    No          NaN    NaN   \n",
+       "529      Wool, greasy          5319  Prod Popultn  Head   50150000.0    NaN   \n",
+       "698      Wool, greasy          5319  Prod Popultn  Head  157000000.0      F   \n",
+       "1107     Wool, greasy          5319  Prod Popultn  Head     600000.0      F   \n",
+       "...               ...           ...           ...   ...          ...    ...   \n",
+       "22009  Honey, natural          5314  Prod Popultn    No    7492300.0      A   \n",
+       "22125    Wool, greasy          5319  Prod Popultn  Head   24468000.0      A   \n",
+       "22147         Beeswax          5314  Prod Popultn    No    2453000.0      A   \n",
+       "22165  Honey, natural          5314  Prod Popultn    No    2492300.0      A   \n",
+       "22293    Wool, greasy          5319  Prod Popultn  Head   31017004.0      A   \n",
+       "\n",
+       "             Y1962  ...       Y2013  Y2013F       Y2014  Y2014F       Y2015  \\\n",
+       "58      18150000.0  ...  13141000.0     NaN         NaN     NaN         NaN   \n",
+       "171            NaN  ...         NaN     NaN         NaN     NaN         NaN   \n",
+       "529     47305408.0  ...  10616300.0       F         NaN     NaN         NaN   \n",
+       "698    164000000.0  ...  81750000.0     NaN         NaN     NaN         NaN   \n",
+       "1107      650000.0  ...   1900000.0       F         NaN     NaN         NaN   \n",
+       "...            ...  ...         ...     ...         ...     ...         ...   \n",
+       "22009    7492300.0  ...  12154000.0       A  12357500.0       A  12538236.0   \n",
+       "22125   25018000.0  ...  49940000.0       A         NaN     NaN         NaN   \n",
+       "22147    2453000.0  ...    386000.0       A    387500.0       A    389093.0   \n",
+       "22165    2492300.0  ...    611045.0       A    611898.0       A    611081.0   \n",
+       "22293   31298727.0  ...  34223300.0       A         NaN     NaN         NaN   \n",
+       "\n",
+       "       Y2015F       Y2016  Y2016F       Y2017  Y2017F  \n",
+       "58        NaN         NaN     NaN         NaN     NaN  \n",
+       "171       NaN         NaN     NaN         NaN     NaN  \n",
+       "529       NaN         NaN     NaN         NaN     NaN  \n",
+       "698       NaN         NaN     NaN         NaN     NaN  \n",
+       "1107      NaN         NaN     NaN         NaN     NaN  \n",
+       "...       ...         ...     ...         ...     ...  \n",
+       "22009       A  13026913.0       A  13321703.0       A  \n",
+       "22125     NaN         NaN     NaN         NaN     NaN  \n",
+       "22147       A    403657.0       A    400019.0       A  \n",
+       "22165       A    619539.0       A    613845.0       A  \n",
+       "22293     NaN         NaN     NaN         NaN     NaN  \n",
+       "\n",
+       "[134 rows x 121 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data['Element'] == 'Prod Popultn']"
    ]
   },
   {
@@ -78,25 +462,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Laying', 'Yield', 'Production', 'Producing Animals/Slaughtered',\n",
-       "       'Yield/Carcass Weight', 'Milk Animals', 'Prod Popultn'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "pd.unique(data['Element'])"
+    "## Elements\n",
+    "|  Element             | Description            |\n",
+    "|----------------------|------------------------|\n",
+    "| Laying               | Birds raised for laying eggs        |\n",
+    "| Yield                | How much of the animal which is used           |\n",
+    "| Production           | How much is produced          |\n",
+    "| Producing Animals/Slaughtered    | How many animals that are being produced for meat        |\n",
+    "| Yield/Carcass Weight | Same as yield, but also taking account size of animal |\n",
+    "| Milk Animals         | How many animals used for milk production     | \n",
+    "| Prod Popultn         | Population of a given item  |\n"
    ]
   },
   {
@@ -437,6 +815,13 @@
     "- How do we handle the different Flags?\n",
     "- Somehow aggregate the units? Make sure we have aggregate unique data and don't count something twice\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
