--- a/TODO.ipynb
+++ b/TODO.ipynb
@@ -58,7 +58,8 @@
     "\n",
     "- Compare to population\n",
     "- Maybe look at export/import if possible?\n",
-    "- Relative area use?"
+    "- Relative area use?\n",
+    "- FROM TA: You could also look into what country/continents is producting more food than it would need to feed its people.\n"
    ]
   },
   {
@@ -67,7 +68,7 @@
    "source": [
     "**Question 4 - How has the development in agriculture affected emission of greenhouse gasses?**\n",
     "\n",
-    "- Get emission data and clean\n",
+    "- Get emission data and clean it\n",
     "- Has climate change already affected production of food?"
    ]
   },
@@ -81,9 +82,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ada] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ada-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
