Export/import data research - won't be possible

--- a/TODO.ipynb
+++ b/TODO.ipynb
@@ -58,6 +58,9 @@
     "\n",
     "- Compare to population\n",
     "- Maybe look at export/import if possible?\n",
+    "\n",
+    "Export import data that FAOSTAT provides only contains crops & livestock primary *products*. These products are not in the same format as the items in our datasets. The export/import data for example cover items such as breakfast cereals, watermelon, coffee, alcoholic beverages etc. This is therefore not relevant for us and we wont be able to work further on this.\n",
+    "\n",
     "- Relative area use?\n",
     "- FROM TA: You could also look into what country/continents is producting more food than it would need to feed its people.\n"
    ]
