Agriculture emissions data cleaned

--- a/Crops test visualizations.ipynb
+++ b/Crops test visualizations.ipynb
@@ -301,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Crops emissions test visuals"
+    "## Agriculture emissions test visuals"
    ]
   },
   {
