Changed name of notebook

--- a/project_notebook.ipynb
+++ b/project_notebook.ipynb
@@ -68,7 +68,8 @@
     "    - [Livestock](#livestock)\n",
     "    - [Crops](#crops)\n",
     "    - [Population](#population)\n",
-    "    - [Emission](#emission)"
+    "    - [Emission](#emission)\n",
+    "- [Plan for Milestone 3](#plan)"
    ]
   },
   {
@@ -2099,7 +2100,7 @@
    "source": [
     "***\n",
     "<a id='emission'></a>\n",
-    "## Emission Data\n",
+    "## Emissions\n",
     "\n",
     "Since the project strive to answer questions regarding the emission that has been caused by agriculture we need data regarding this area. In this project we will be analyzing two different datasets, one will be used when we are interested in a continents total agriculture emissions while the other dataset will be used when more specific data, such as how much CO2 the pork production causes in a certain country or in the world.  \n"
    ]
@@ -2986,6 +2987,14 @@
    "source": [
     "# Data for each countries sheep emissions per year\n",
     "sheep_data.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=plan></a>\n",
+    "## Plan for Milestone 3"
    ]
   },
   {
