--- a/emissions_cleaning.ipynb
+++ b/emissions_cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "2  Aggregate, may include official, semi-official...   NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -217,20 +217,21 @@
      "output_type": "stream",
      "text": [
       "Missing information in categorized dataset:\n",
-      " Domain Code         0\n",
-      "Domain              0\n",
-      "Area Code           0\n",
-      "Area                0\n",
-      "Element Code        0\n",
-      "Element             0\n",
-      "Item Code           0\n",
-      "Item                0\n",
-      "Year Code           0\n",
-      "Year                0\n",
-      "Unit                0\n",
-      "Value               0\n",
-      "Flag                0\n",
-      "Flag Description    0\n",
+      " Domain Code           0\n",
+      "Domain                0\n",
+      "Area Code             0\n",
+      "Area                  0\n",
+      "Element Code          0\n",
+      "Element               0\n",
+      "Item Code             0\n",
+      "Item                  0\n",
+      "Year Code             0\n",
+      "Year                  0\n",
+      "Unit                  0\n",
+      "Value                 0\n",
+      "Flag                  0\n",
+      "Flag Description      0\n",
+      "Note                342\n",
       "dtype: int64\n"
      ]
     }
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +485,7 @@
        "2  Aggregate, may include official, semi-official...  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +886,7 @@
        "[336 rows x 6 columns]"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +920,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
