Some minor changes

--- a/project_notebook.ipynb
+++ b/project_notebook.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Milestone 2\n",
-    "This notebook summerizes all of what we have done in the project so far, and below is the research questions we wish to answer in this project.\n",
+    "This notebook summarizes all that we have done in the project so far, and below are the research questions we wish to answer in this project.\n",
     "\n",
     "1. How has the crops/livestock primary production developed since 1960?\n",
     "2. Is there a connection between the development of livestock primary production and crop production?\n",
@@ -45,7 +45,7 @@
    "metadata": {},
    "source": [
     "### General Layout of Datasets\n",
-    "As we have collected all the datasets from the same source they are somewhat organized in the same way. There are 7 columns with metadata and and most of the values there is also a flag to explain how the data is collected.\n",
+    "As we have collected all the datasets from the same source they are somewhat organized in the same way. There are 7 columns with metadata and for most of the values there are also flags that explain how the data was collected.\n",
     "\n",
     "\n",
     "| Column name         | Explanation|\n",
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import packages that are most used\n",
+    "# Import packages that are used\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -95,9 +95,9 @@
     "\n",
     "The livestock dataset covers information on several livestock products globally, during the time 1961-2014. From 2014-2017 several values may be missing. The data contains all the production from both industrial production and farm production. The dataset is available at http://www.fao.org/faostat/en/#data/QL.   \n",
     "\n",
-    "Each row of the raw livestock dataset contains data on all years available, on a given metadata. There are 7 columns of metadata, which can be seen below, and the rest of the columns are data for each year. The years usually span from 1961 to 2017, but some years are missing.\n",
+    "Each row of the raw livestock dataset contains data on all years available, on a given metadata. There are 7 columns of metadata, which were described above, and the rest of the columns are data for each year. \n",
     "\n",
-    "The Item also describes if a product is “Indigenous” or not. If a product is not “indigenous” the animal from which the product has been derived has been imported.\n"
+    "The Item also describes if a product is “indigenous” or not. If a product is not indigenous, the animal from which the product has been derived, has been imported."
    ]
   },
   {
@@ -236,7 +236,7 @@
     "### Exploration\n",
     "\n",
     "Thorough information on all columns can be found in the notebook *livestock_data_cleaning.ipynb*.   \n",
-    "Here is the different elements that are found in the dataset.\n",
+    "Here are the different elements that are found in the dataset.\n",
     "\n",
     "\n",
     "|  Element             | Description            |\n",
@@ -684,7 +684,8 @@
    "metadata": {},
    "source": [
     "**Missing Data**  \n",
-    "Below we can see that there are some data missing in the dataset, and when we are talking are talking about production at country-levet this is not very suprising. Since 1960, a lot of states have been founded and dissolved, with the Soviet Union in 1991 as the most notable. We assume that the missing year is included somewhere else (for example Albania in Soviet Union), and remove all rows with missing values.  \n",
+    "Below we can see that there is some data missing in the dataset, and when we are talking about production at country-level this is not very suprising. Since 1960, a lot of states have been founded and dissolved, with the Soviet Union in 1991 as the most notable. We assume that the missing year is included somewhere else (for example Albania in Soviet Union), and remove all rows (that is years) with missing values.  \n",
+    "\n",
     "Also, we choose to remove the data after 2013 as a lot of information is missing here and we wish to have consistent data."
    ]
   },
@@ -1002,8 +1003,7 @@
     "        plt.xlabel('Year')\n",
     "        plt.ylabel('Tonnes')\n",
     "\n",
-    "    plt.show()\n",
-    "    \n"
+    "    plt.show()"
    ]
   },
   {
@@ -1086,9 +1086,7 @@
     "    plt.xlabel('Year')\n",
     "    plt.ylabel('Tonnes')\n",
     "    plt.title('Yearly production of different indigenous meats, Normalized on population')\n",
-    "    plt.plot(x, y)\n",
-    "        \n",
-    "        "
+    "    plt.plot(x, y)"
    ]
   },
   {
@@ -3627,9 +3625,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ada] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ada-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3641,7 +3639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
