small update on project notebook

--- a/project_notebook.ipynb
+++ b/project_notebook.ipynb
@@ -12,8 +12,7 @@
     "3. How are the differences in production quantities between the different continents?\n",
     "4. How has the development in agriculture affected emission of greenhouse gasses?\n",
     "\n",
-    "To answer this we are using 4 different datasets, all are collected from FAO-STAT (Food and Agriculture Organization of the United Nations - <http://www.fao.org/faostat/en/#data>). In this notebook we will describe and clean all of the data. \n",
-    "This notebook is somewhat stripped to the most important findings, usually more extensive information can be found in the seperate notebooks."
+    "To answer this we are using 4 different datasets, all are collected from FAO-STAT (Food and Agriculture Organization of the United Nations - <http://www.fao.org/faostat/en/#data>). In this notebook we will describe and clean all of the data. \n"
    ]
   },
   {
@@ -3630,21 +3629,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Internal Milestones until Project Milestone 3 \n",
+    "## Internal Milestones until Project Milestone 3 \n",
+    "\n",
+    "In the ReadMe we have written how we will answer all the research questions, and we will therefore not go in detail of that here.  \n",
+    "This is to be considered an overall plan.\n",
+    "\n",
     "1 - Answer research Questions 1 & 2 (29th November)\n",
-    "- Investigate any oddities with the cleaned data\n",
-    "- Additional research questions?\n",
     "\n",
-    "2 - Answer research Questions 3 & 4. Decide report format (6th December)\n",
-    "- Decide upon format on report and start a draft\n",
+    "2 - Answer research Questions 3 & 4. (6th December)\n",
+    "- Decide on either report or data story.\n",
     "\n",
-    "3 - Finish visuals and finish draft of report (13th December)\n",
-    "- Finnish draft, during the last week only editing of text in report should be needed.\n",
+    "3 - Finish visuals and make a draft of report/data story (13th December)\n",
     "\n",
     "4 - Final Deadline (20th December)\n",
-    "- Report to be returned\n",
-    "- A supporting notebook shall be returned as well(extending on Milestone 2)\n",
-    "- Update readme with contributions of team members (including who works on the final presentation)"
+    "- Make sure the report/data is consistent, and includes all the important information.\n",
+    "- Make sure the final notebook (extending on Milestone 2) is comprehensive and includes all mathematical calculations.\n",
+    "- Update readme with contributions of team members (including who works on the final presentation)\n",
+    "\n",
+    "5 - Presentations (18th January)\n",
+    "- Finnish poster for presentation\n",
+    "- Decide on who talks\n",
+    "- Prepare a 3 min presentation"
    ]
   },
   {
